@@ -1,7 +1,17 @@
-FROM openjdk:21-jdk
+FROM openjdk:8-jre-alpine
 
-COPY target/demo-0.0.1-SNAPSHOT.jar /app.jar
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+RUN echo 'Asia/Shanghai' >/etc/timezone
 
-EXPOSE 8080
+ENV JAVA_OPTS ''
 
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+WORKDIR /app
+ADD target/prometheus-test-demo-0.0.1-SNAPSHOT.jar .
+
+
+ENTRYPOINT ["sh", "-c", "set -e && java -XX:+PrintFlagsFinal \
+                                           -XX:+HeapDumpOnOutOfMemoryError \
+                                           -XX:HeapDumpPath=/heapdump/heapdump.hprof \
+                                           -XX:+UnlockExperimentalVMOptions \
+                                           -XX:+UseCGroupMemoryLimitForHeap \
+                                           $JAVA_OPTS -jar prometheus-test-demo-0.0.1-SNAPSHOT.jar"]
